--- a/hub-frontend/public/Part2-python-scanner-bots.html
+++ b/hub-frontend/public/Part2-python-scanner-bots.html
@@ -76,11 +76,7 @@
       display: grid;
       place-items: center;
       padding: 18px;
-      background:
-        radial-gradient(1200px 900px at 50% 18%, rgba(255, 255, 255, 0.085), transparent 62%),
-        radial-gradient(900px 700px at 22% 80%, rgba(248, 216, 112, 0.045), transparent 62%),
-        radial-gradient(900px 700px at 85% 70%, rgba(220, 228, 242, 0.040), transparent 62%),
-        linear-gradient(to bottom, var(--bg0), var(--bg1));
+      background: #05070c;
     }
 
     .frame {
@@ -90,9 +86,7 @@
       border-radius: var(--radius);
       border: 1px solid var(--stroke);
       overflow: hidden;
-      background:
-        radial-gradient(1200px 900px at 50% 15%, rgba(255, 255, 255, 0.036), transparent 66%),
-        linear-gradient(to bottom right, rgba(255, 255, 255, 0.018), rgba(255, 255, 255, 0.006));
+      background: #05070c;
       box-shadow:
         0 40px 120px rgba(0, 0, 0, 0.72),
         inset 0 1px 0 rgba(255, 255, 255, 0.05);
@@ -353,11 +347,11 @@
       border-radius: var(--panelRadius);
       border: 1px solid rgba(255, 255, 255, 0.080);
       background:
-        radial-gradient(700px 520px at 50% 45%, rgba(255, 255, 255, 0.026), transparent 65%),
-        radial-gradient(900px 720px at 50% 60%, rgba(0, 0, 0, 0.10), rgba(0, 0, 0, 0.34));
+        radial-gradient(1200px 900px at 50% 15%, rgba(255, 255, 255, 0.018), transparent 66%),
+        linear-gradient(to bottom right, rgba(255, 255, 255, 0.034), rgba(255, 255, 255, 0.012));
       overflow: hidden;
       box-shadow:
-        inset 0 1px 0 rgba(255, 255, 255, 0.04);
+        inset 0 1px 0 rgba(255, 255, 255, 0.05);
     }
 
     .panel::before {
@@ -389,7 +383,7 @@
       justify-content: center;
       gap: 10px;
       align-items: center;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: 900;
       letter-spacing: 0.22em;
       text-transform: uppercase;
@@ -517,12 +511,14 @@
     }
 
     @keyframes routerHintGlow {
+
       0%,
       100% {
         opacity: 0.15;
         box-shadow: 0 0 10px rgba(255, 255, 255, 0.16);
         border-color: rgba(255, 255, 255, 0.18);
       }
+
       50% {
         opacity: 0.75;
         box-shadow: 0 0 24px rgba(255, 255, 255, 0.45);
@@ -935,6 +931,7 @@
         background: rgba(0, 0, 0, 0.42);
         border-color: rgba(255, 255, 255, 0.08);
       }
+
       .brandMark,
       .workflowNote {
         max-width: 92vw;
@@ -1006,7 +1003,7 @@
         flex: 1;
         min-height: 0;
         padding-top: 480px;
-        padding-bottom: calc(var(--mobileDockInset) + 56px);
+        padding-bottom: calc(var(--mobileDockInset) + .01px);
         max-height: calc(100dvh - var(--mobileHeaderInset) - var(--mobileDockInset));
       }
 
@@ -1018,7 +1015,7 @@
       .routerDock {
         left: 50%;
         right: auto;
-        bottom: 22px;
+        bottom: 60px;
         top: auto;
         transform: translateX(-50%);
         gap: 6px;
@@ -1155,10 +1152,11 @@
     };
 
     const OFFSETS = { EARLY: 0.59, TREND: 0.11, RUNNER: -0.59 };
-    if (window.matchMedia && window.matchMedia("(max-width: 430px)").matches) {
-      OFFSETS.EARLY = 0.38;
-      OFFSETS.TREND = 0.06;
-      OFFSETS.RUNNER = -0.38;
+    const IS_MOBILE = window.matchMedia && window.matchMedia("(max-width: 430px)").matches;
+    if (IS_MOBILE) {
+      OFFSETS.EARLY = 0.30;
+      OFFSETS.TREND = 0.28;
+      OFFSETS.RUNNER = -0.36;
     }
 
     const MASTER = {
@@ -1634,6 +1632,15 @@
           zapSegs: 28,
           zapJitter: 5
         };
+        if (IS_MOBILE) {
+          this.KNOBS.maxDots = 2;
+          this.KNOBS.dotAlpha = 0.8;
+          this.CFG.sparks = 160;
+          this.CFG.bgStars = 30;
+          this.CFG.zapSegs = 20;
+          this.CFG.zapJitter = 4;
+          this.CFG.vignette = 0.4;
+        }
 
         this.W = 1; this.H = 1; this.DPR = 1;
         this.cam = { rx: 0, ry: 0, trx: 0 };
@@ -1652,9 +1659,9 @@
       }
 
       getBotProfile(name) {
-        if (name === "EARLY") return { dotSpawnPerSec: 0.10, ringBrightness: 1.18, cooldown: 2.8 };
-        if (name === "TREND") return { dotSpawnPerSec: 0.18, ringBrightness: 1.28, cooldown: 1.8 };
-        return { dotSpawnPerSec: 0.12, ringBrightness: 1.22, cooldown: 2.6 };
+        if (name === "EARLY") return { dotSpawnPerSec: 0.02, ringBrightness: 1.18, cooldown: 35 };
+        if (name === "TREND") return { dotSpawnPerSec: 0.06, ringBrightness: 1.28, cooldown: 45 };
+        return { dotSpawnPerSec: 0.015, ringBrightness: 1.22, cooldown: 55 };
       }
 
       resize() {
@@ -1919,7 +1926,8 @@
                     r01: d.r01,
                     sparkIdx,
                     zapSeed: lastZap ? lastZap.seed : (Math.random() * 9999),
-                    core: this
+                    core: this,
+                    born: nowSec
                   });
                 } catch (e) {
                   // don't crash core loop if overlay has a hiccup
@@ -2096,6 +2104,7 @@
                ======================================================== */
       addZap(angle, r01) {
         const now = performance.now() / 1000;
+        const born = payload?.born ?? now;
 
         // pick the spark that is CURRENTLY closest to this scan angle
         // (this makes the bolt land ON the moving ring instead of empty space)
@@ -2103,7 +2112,7 @@
 
         this.zaps.push({
           a: angle,
-          born: now,
+          born: born,
           life: this.CFG.zapLife,
           seed: Math.random() * 9999,
           sparkIdx,
@@ -2405,7 +2414,7 @@
         const dt = this.lastMs ? Math.min(0.05, (nowMs - this.lastMs) / 1000) : 0.016;
         this.lastMs = nowMs;
 
-        const offset = OFFSETS[this.botName] || 0;
+        const offset = IS_MOBILE && this.botName !== "EARLY" ? 0 : (OFFSETS[this.botName] || 0);
         const targetTilt = clamp(MASTER.baseTilt + offset, -this.CFG.tiltClamp, this.CFG.tiltClamp);
         this.cam.trx = targetTilt;
         this.cam.rx += (this.cam.trx - this.cam.rx) * this.CFG.cameraEase;
@@ -3025,6 +3034,10 @@
       resizePortal();
     }
     window.addEventListener("resize", () => setTimeout(resizeAll, 0));
+    const clusterWrap = document.querySelector(".clusterWrap");
+    if (clusterWrap) {
+      clusterWrap.addEventListener("scroll", () => overlay.updateAnchors(), { passive: true });
+    }
 
     /* ============================================================
        PORTAL LOOP (draws on top while entering)
